# whatsapp-ghost

./: .env.example  .gitignore  README.md  ghost.py  pyproject.toml
contracts/v25.0/: README.md  errors.json
examples/: __init__.py  webhook_receiver.py
src/whatsapp_ghost/: __init__.py  api.py  cli.py  clock.py  config.py  db.py  engine.py  errors.py  notifications.py  tui.py  web_console.py
src/whatsapp_ghost/web/: console.css  console.html  console.js  phone.css  phone.html  phone.js
tests/: README.md  conftest.py  test_api.py  test_browser_e2e.py  test_cli.py  test_media.py  test_messages_and_windows.py  test_notifications.py  test_persistence_clock_and_reset.py  test_resources_and_auth.py  test_templates.py  test_tui_e2e.py  test_ui_clients.py  test_webhooks.py
